# learn-fastapi

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
config/: settings.py
exceptions/: custom_exceptions.py  order_exception.py
external_api/: async_ext_api.py  ext_api.py
orders_api/: api.py  async_api.py
tests/: test_api.py
